[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dabble"
version = "0.1.0"
authors = [{name = "Erik Rose", email = "erikrose@grinchcentral.com"}]
description = "A health project for me"
keywords = [
    "interpreter",
    "language",
]
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]

[project.scripts]
dabble = "dabble.command:main"
